IocRequestBody and IocResponseBody annotation, test success